INCLUDES =			     \
	@clanGL_CFLAGS@		     \
	@clanCore_CFLAGS@	     \
	@clanApp_CFLAGS@	     \
	@clanDisplay_CFLAGS@         \
        @libpathplan_CFLAGS@         \
        @stackless_CFLAGS@

bin_PROGRAMS = poujol
poujol_SOURCES = \
  glumolsprite.cpp \
  glumolzbuffer.cpp \
  glumolregion.cpp \
  glumolanimation.cpp \
  writepng.cpp \
  cl_writepng.cpp \
  build_module.cpp \
  build_glumolgame.cpp \
  glumolfont.cpp build_glumolfont.cpp \
  build_glumolsprite.cpp \
  build_glumolzbuffer.cpp \
  build_glumolthread.cpp \
  build_animation.cpp \
  build_glumolscreen.cpp \
  build_glumolregion.cpp \
  glumolinput.cpp \
  build_component.cpp build_button.cpp \
  build_filedialog.cpp \
  build_frame.cpp build_guimanager.cpp \
  build_image.cpp build_inputbox.cpp \
  build_inputdialog.cpp build_label.cpp \
  build_listbox.cpp build_menu.cpp \
  build_menuitem.cpp build_menunode.cpp \
  build_messagebox.cpp build_progressbar.cpp \
  build_radiobutton.cpp build_radiogroup.cpp \
  build_resourcemanager.cpp build_scrollbar.cpp \
  build_stylemanager.cpp \
  build_treeitem.cpp \
  build_treenode.cpp build_treeview.cpp \
  build_window.cpp \
  build_pathfinder.cpp pathfinder.cpp polygon.cpp \
  build_misc_classes.cpp misc_classes.cpp \
  PolyUtil.cpp \
  build_soundbuffer.cpp build_soundbuffersession.cpp \
  build_soundoutput.cpp build_soundprovider.cpp build_filter.cpp
  # glumolgame.cpp \
  # build_checkbox.cpp \
  # build_glumolinput.cpp
